# ConfigConverter

./: Cargo.toml  clippy.toml
.github/workflows/: create_release.yml
.github/workflows/release/: create_binaries.yml
src/: decode.rs  encode.rs  lib.rs  main.rs
src/cli/: interface.rs  mod.rs
tests/: test_decode.rs  test_encode.rs
tests/test_data/: pyproject.json  pyproject.toml  pyproject.yaml
